# labs-tools-shorturls

./: .gitignore  .gitreview  Cargo.toml  Rocket.toml  app.py  build.sh  requirements.txt  run-extractor.sh  run-webserver.sh  run.sh  service.template  tox.ini
src/: lib.rs  main.rs
templates/: base.html.tera  domain.html.tera  error.html.tera  main.html  main.html.tera
