[package]
name = "shorturls"
version = "0.1.0"
authors = ["Kunal Mehta <legoktm@debian.org>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
rocket_dyn_templates = {version = "0.1.0-rc.1", features = ["tera"]}
redis = {version = "0.21.0", features = ["aio", "tokio-comp"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
plotters = {version = "0.3", default-features = false, features = ["svg_backend", "datetime", "line_series"]}
chrono = "0.4.13"
flate2 = "1.0.14"
url = "2"
anyhow = "1.0.31"
thousands = "0.2.0"
tokio = {version = "1.0", features = ["fs"]}

[[bin]]
name = "extract-data"
path = "src/bin/extract_data.rs"
